# avaread

./: .gitignore  .pre-commit-config.yaml  404.html  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: build.yml  docs-dev.yml  docs-release.yml
dev/: 404.html  index.html  objects.inv  sitemap.xml
dev/examples/: examples.ipynb  index.html
dev/license/: index.html
dev/reference/avaread/: index.html
dev/reference/avaread/reader/: index.html
dev/search/: search_index.json
docs/: examples.ipynb
examples/: index.html
license/: index.html
reference/avaread/: index.html
reference/avaread/AvaTypes/: index.html
reference/avaread/reader/: index.html
search/: search_index.json
src/avaread/: AvaTypes.py  __init__.py  reader.py
v0.2.0/reference/avaread/: index.html
v0.2.0/reference/avaread/AvaTypes/: index.html
